   :attr:`~stalker.core.models.User.projects` attribute is now gathered by
   looking at the :attr:`~stalker.core.models.Task.project` attribute of the
   :class:`~stalker.core.models.Task`\ s in the
   :attr:`~stalker.core.models.User.tasks` attribute.

 * :class:`~stalker.core.models.StatusList` now accepts classes for the
   ``target_entity_type`` argument.

v0.1.1.a8
---------

 * From now on an :class:`~stalker.core.models.Asset` instance can not be
   created without a :class:`~stalker.core.models.AssetType` object defining
   the type of the current :class:`~stalker.core.models.Asset`. This is done to
   prevent creation of :class:`~stalker.core.models.Asset`\ s without a certain
   type.

 * Fixed :class:`~stalker.core.models.Project` where it was not raising a
   ValueError properly for :attr:`~stalker.core.models.Project.sequence`,
   :attr:`~stalker.core.models.Project.assets` and
   :attr:`~stalker.core.models.Project.users` attributes when the assigned
   value is not iterable.

 * Fixed :class:`~stalker.core.models.Department` where it was not raising a
   ValueError properly for :attr:`~stalker.core.models.Department.members`
   attribute when the assigned value is not iterable.

 * Changed the representaion string of the :class:`~stalker.core.models.Shot`
   to <Shot (Shot.code, Shot.code)> because the
   :attr:`~stalker.core.models.Shot.name` is not meaningful.

 * Changed the way :class:`~stalker.core.models.EntityMeta` metaclass working.
   It is now using the ``__new__`` method and the ``dict_`` of the class to
   set the attributes.

 * The :class:`~stalker.core.models.EntityMeta` now adds another attribute
   called ``plural_name`` to the classes, which shows the plural form of the
   class name. By default it tries to set it to a good name using plural form
   rules of English but if the name has an irregular plural name (or it is not
   in English) you can override this attribute by adding ``plural_name`` to the
   class attributes::
     